# CLtensor

./: README.md
CLTensor/: CMakeLists.txt  README.md  build.config  install.sh  variable.sh
CLTensor/include/: TArm.h
CLTensor/include/TArm/: compute.h  tensor.h
CLTensor/mdfile/: common.md
CLTensor/pytools/: generate_DenseTensor.py  generate_den_mat.py  generate_denmat.py  generate_tensor.py  generate_vector.py
CLTensor/runtest/: runspttm.sh  runttv.sh
CLTensor/src/helper/: error.c  ktimer.c
CLTensor/src/matrix/: matrix.c  mtx_khatri-rao.c  mtx_krnoecker.c
CLTensor/src/tensor/: tc.c  tensor.c  tensor_ttm.c  tensor_ttv.c
CLTensor/src/tilespatsr/: mttkrp.c  tilespatsr.c  ttv.c
CLTensor/src/vector/: vector.c
CLTensor/tensor/: 3d_3_8.tns  4d_3_16.tns  4d_3_dense.tns  sparse.mtx  sparse3_3_2.mtx
CLTensor/test/: CMakeLists.txt  testdenttv.c  testdenttv_hip.cu  testspttm.c  testspttm_hip.cu  testspttm_hip5.cu
armtensor/: CMakeLists.txt  README.md  build.config  build.sh  oottm.sh  oottv.sh
armtensor/data/: rehadamard.tns  rehadamard_sp.tns  result.txt
armtensor/include/TArm/: compute.h  structs.h  tilespatsr.h
armtensor/log/: test_mttkrp.sh  test_ttv.sh
armtensor/oydata/: 3d_3_13.tns  3d_3_5.tns  5d_3_13.tns  dehadamard.tns  denspahadamard.mtx  denttv.tns  matricization.mtx  rwdehadamard.tns  sparse.mtx  spattm.tns  spattv.tns  sphadamard.tns  tensor.tns  testdump.tns  testv2.tns  ttv.tns  vector_4.tns
armtensor/oytools/: generate_tensor.py
armtensor/src/: CMakeLists.txt
armtensor/src/helper/: error.c
armtensor/src/matrix/: matrix.c  matrix_self.c  mtx_hadamard.c
armtensor/src/tensor/: sort.c  tensor_matricization.c  tensor_ttm.c  tensor_ttv.c  ttm.c  ttvchain.c
armtensor/src/tilespatsr/: tiling.c
armtensor/tensor/: 4d_4_16.tns  result.tns
armtensor/test/: CMakeLists.txt  test_hu.c  test_tilespatsr.c  test_tilespatsr_ttv.c  testhadmard.c  testmatricization.c  testoyttm.c  testsome.c  testttm.c  testttv.c  testvector.c
